unpackaged/main/default/objects/Account/fields/Is_Address_Valid__c.field-meta.xml
<CustomField>
    <fullName>Is_Address_Valid__c</fullName>
    <description>Used to store the response of Address Validation API.

DWN --- When Address validation Service is down.

NO---When the Address validation was successful

YES --- When the Address validation is invalid or was declined/overridden by the user</description>
    <label>Is Address Valid?</label>
    <length>3</length>
    <type>Text</type>
</CustomField>