unpackaged/main/default/objects/Account/fields/Level_of_Membership__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Membership__c</fullName>
    <label>Membership Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>REGULAR</fullName>
            </value>
            <value>
                <fullName>PLUS</fullName>
            </value>
            <value>
                <fullName>PLUS RV</fullName>
            </value>
            <value>
                <fullName>TOWING ONLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>