unpackaged/main/default/objects/Account/fields/Long_Tow_Miles_Used__c.field-meta.xml
<CustomField>
    <fullName>Long_Tow_Miles_Used__c</fullName>
    <label>Long Tow Miles Used</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>