unpackaged/main/default/objects/Account/fields/Max_Long_Tow_Miles__c.field-meta.xml
<CustomField>
    <fullName>Max_Long_Tow_Miles__c</fullName>
    <label>Max Long Tow Miles</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>