unpackaged/main/default/objects/Account/fields/Member_Club_Code__c.field-meta.xml
<CustomField>
    <fullName>Member_Club_Code__c</fullName>
    <label>Member Club Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>