unpackaged/main/default/objects/Account/fields/MemberSince__c.field-meta.xml
<CustomField>
    <fullName>MemberSince__c</fullName>
    <description>Formula field that mirrors Membership_Since__pc. As person Account fields cannot be imported on LWC, this is a workaround</description>
    <formula>Membership_Since__pc</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MemberSince</label>
    <type>Text</type>
</CustomField>