unpackaged/main/default/objects/Account/fields/Motorcycle_Included__c.field-meta.xml
<CustomField>
    <fullName>Motorcycle_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is motorcycle selected in Create Member flow ?</description>
    <label>Motorcycle Included ?</label>
    <type>Checkbox</type>
</CustomField>