unpackaged/main/default/objects/Account/fields/Parent_Club_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Club_Name__c</fullName>
    <label>Member Parent Club</label>
    <length>255</length>
    <type>Text</type>
</CustomField>