unpackaged/main/default/objects/Account/fields/POC_ID__c.field-meta.xml
<CustomField>
    <fullName>POC_ID__c</fullName>
    <description>POC Customer External Identifier for AXIS Integration</description>
    <externalId>true</externalId>
    <label>POC ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>