unpackaged/main/default/objects/Account/fields/Proxy_UI__c.field-meta.xml
<CustomField>
    <fullName>Proxy_UI__c</fullName>
    <description>External Identifier for AXIS integration</description>
    <externalId>true</externalId>
    <label>Proxy UI</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>