unpackaged/main/default/objects/Account/fields/Repair_shop_with_Address__c.field-meta.xml
<CustomField>
    <fullName>Repair_shop_with_Address__c</fullName>
    <formula>Name + &#39;, &#39; +  BillingStreet + &#39;, &#39; + BillingCity + &#39;, &#39; +  BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repair shop with Address</label>
    <type>Text</type>
</CustomField>