unpackaged/main/default/objects/Account/fields/RV_Offering__c.field-meta.xml
<CustomField>
    <fullName>RV_Offering__c</fullName>
    <label>RV Offering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Recreational Vehicles or Trailers up to 23 ft</fullName>
            </value>
            <value>
                <fullName>Recreational Vehicles or Trailers over 24ft - 32ft</fullName>
            </value>
            <value>
                <fullName>Recreational Vehicles or Trailers up to 33 ft or longer</fullName>
            </value>
            <value>
                <fullName>Recreational Vehicles or Trailers up to 23 ft or over 24ft - 32ft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>