unpackaged/main/default/objects/Account/fields/Service_Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>Service_Vehicle_Make__c</fullName>
    <label>Service Vehicle Make</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMC</fullName>
            </value>
            <value>
                <fullName>Chrysler</fullName>
            </value>
            <value>
                <fullName>Dodge</fullName>
            </value>
            <value>
                <fullName>Jeep</fullName>
            </value>
            <value>
                <fullName>Plymouth</fullName>
            </value>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>Lincoln</fullName>
            </value>
            <value>
                <fullName>Mercury</fullName>
            </value>
            <value>
                <fullName>Buick</fullName>
            </value>
            <value>
                <fullName>Cadillac</fullName>
            </value>
            <value>
                <fullName>Chevrolet</fullName>
            </value>
            <value>
                <fullName>GMC</fullName>
            </value>
            <value>
                <fullName>Hummer</fullName>
            </value>
            <value>
                <fullName>Oldsmobile</fullName>
            </value>
            <value>
                <fullName>Pontiac</fullName>
            </value>
            <value>
                <fullName>Saturn</fullName>
            </value>
            <value>
                <fullName>Acura</fullName>
            </value>
            <value>
                <fullName>Daewoo</fullName>
            </value>
            <value>
                <fullName>Datsun</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Hyundai</fullName>
            </value>
            <value>
                <fullName>Infiniti</fullName>
            </value>
            <value>
                <fullName>Isuzu</fullName>
            </value>
            <value>
                <fullName>Kia</fullName>
            </value>
            <value>
                <fullName>Lexus</fullName>
            </value>
            <value>
                <fullName>Mazda</fullName>
            </value>
            <value>
                <fullName>Mitsubishi</fullName>
            </value>
            <value>
                <fullName>Nissan</fullName>
            </value>
            <value>
                <fullName>Scion</fullName>
            </value>
            <value>
                <fullName>Subaru</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>