unpackaged/main/default/objects/Account/fields/Service_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Vehicle_Type__c</fullName>
    <label>Service Vehicle Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2M (2-Wheeled Motorcycle)</fullName>
            </value>
            <value>
                <fullName>3M (3 - Wheeled Motorcycle)</fullName>
            </value>
            <value>
                <fullName>4M (ATV)</fullName>
            </value>
            <value>
                <fullName>BK (Bicycles)</fullName>
            </value>
            <value>
                <fullName>DW (Dual Wheels)</fullName>
            </value>
            <value>
                <fullName>GC (Golf Cart)</fullName>
            </value>
            <value>
                <fullName>PS (Passenger Car/Truck)</fullName>
            </value>
            <value>
                <fullName>R1 (RV &lt; 23 feet)</fullName>
            </value>
            <value>
                <fullName>R2 (RV 24-32 feet)</fullName>
            </value>
            <value>
                <fullName>R3 (RV &gt; 33 feet)</fullName>
            </value>
            <value>
                <fullName>SM (Snowmobile)</fullName>
            </value>
            <value>
                <fullName>TR (Trailer)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>