unpackaged/main/default/objects/Account/fields/Special_Billing__c.field-meta.xml
<CustomField>
    <fullName>Special_Billing__c</fullName>
    <description>Source:POC</description>
    <label>Special Billing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>