unpackaged/main/default/objects/Account/fields/State_FIPS__c.field-meta.xml
<CustomField>
    <fullName>State_FIPS__c</fullName>
    <label>State FIPS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>