unpackaged/main/default/objects/Account/fields/TEST__c.field-meta.xml
<CustomField>
    <fullName>TEST__c</fullName>
    <formula>TRIM(LEFT( Member_Card_Num__pc , 15))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEST</label>
    <type>Text</type>
</CustomField>