unpackaged/main/default/objects/Account/fields/Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Make__c</fullName>
    <label>Vehicle Make</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACURA</fullName>
            </value>
            <value>
                <fullName>ADVANCE MIXER</fullName>
            </value>
            <value>
                <fullName>ALFA ROMEO</fullName>
            </value>
            <value>
                <fullName>ALLSTATE</fullName>
            </value>
            <value>
                <fullName>AMC</fullName>
            </value>
            <value>
                <fullName>AMERICAN AUSTIN</fullName>
            </value>
            <value>
                <fullName>AMERICAN BANTAM</fullName>
            </value>
            <value>
                <fullName>AMERICAN COACH</fullName>
            </value>
            <value>
                <fullName>AMERICAN EAGLE</fullName>
            </value>
            <value>
                <fullName>AMERICAN HERITAGE</fullName>
            </value>
            <value>
                <fullName>AMERICAN IRONHORSE</fullName>
            </value>
            <value>
                <fullName>AMERICAN LAFRANCE</fullName>
            </value>
            <value>
                <fullName>AMERICAN QUANTUM</fullName>
            </value>
            <value>
                <fullName>AMERICAN SUNDIRO</fullName>
            </value>
            <value>
                <fullName>ANTHEM</fullName>
            </value>
            <value>
                <fullName>APEX</fullName>
            </value>
            <value>
                <fullName>APOLLO</fullName>
            </value>
            <value>
                <fullName>APRILIA</fullName>
            </value>
            <value>
                <fullName>ARNOLT-MG</fullName>
            </value>
            <value>
                <fullName>ARROWHEAD</fullName>
            </value>
            <value>
                <fullName>ASPEN</fullName>
            </value>
            <value>
                <fullName>ASTON MARTIN</fullName>
            </value>
            <value>
                <fullName>ATK</fullName>
            </value>
            <value>
                <fullName>AUBURN</fullName>
            </value>
            <value>
                <fullName>AUDI</fullName>
            </value>
            <value>
                <fullName>AUSTIN HEALEY</fullName>
            </value>
            <value>
                <fullName>AUSTIN ROVER</fullName>
            </value>
            <value>
                <fullName>AUTOCAR</fullName>
            </value>
            <value>
                <fullName>AUTOCAR LLC.</fullName>
            </value>
            <value>
                <fullName>AVALANCHE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>