unpackaged/main/default/objects/Account/fields/X200_Mile_Tow_Used__c.field-meta.xml
<CustomField>
    <fullName>X200_Mile_Tow_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>200 Mile Tow Used</label>
    <type>Checkbox</type>
</CustomField>