unpackaged/main/default/objects/Account/recordTypes/ACG_AAR.recordType-meta.xml
<RecordType>
    <fullName>ACG_AAR</fullName>
    <active>true</active>
    <label>Repair Shops</label>
</RecordType>