unpackaged/main/default/objects/Account/recordTypes/Approved_Garage.recordType-meta.xml
<RecordType>
    <fullName>Approved_Garage</fullName>
    <active>true</active>
    <label>Approved Garage</label>
</RecordType>