unpackaged/main/default/objects/Account/recordTypes/ERS_Member.recordType-meta.xml
<RecordType>
    <fullName>ERS_Member</fullName>
    <active>true</active>
    <label>ERS Member</label>
</RecordType>