unpackaged/main/default/objects/Account/listViews/All_Approved_Garage_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Approved_Garage_Accounts</fullName>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Approved_Garage_Type__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Service_Vehicle_Type__c</columns>
    <columns>Service_Vehicle_Make__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>Phone__c</columns>
    <columns>Latitude__c</columns>
    <columns>Longitude__c</columns>
    <columns>OperatingHours</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Approved_Garage</value>
    </filters>
    <label>All Approved Garage Accounts</label>
</ListView>