unpackaged/main/default/objects/Account/listViews/All_Facility_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Facility_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.IS_PARNTER</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Original_Member_Id__pc</columns>
    <columns>OperatingHours</columns>
    <columns>Service_Territory__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Facility_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Facility Accounts</label>
</ListView>