unpackaged/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>IS_PERSON_ACCOUNT</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>ACG_AAA_Membership__c</columns>
    <columns>ACG_Entitlements_Used__c</columns>
    <columns>Membership_Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IS_PERSON_ACCOUNT</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ACG_AAA_Membership__c</field>
        <operation>contains</operation>
        <value>6202402268845212</value>
    </filters>
    <label>All Person Accounts</label>
</ListView>