unpackaged/main/default/objects/Account/listViews/BY_Facility.listView-meta.xml
<ListView>
    <fullName>BY_Facility</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Facility_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Facility</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>516037</value>
    </filters>
    <label>BY Facility</label>
    <sharedTo>
        <group>All_Administrators</group>
    </sharedTo>
</ListView>