unpackaged/main/default/objects/Account/listViews/ERS_Facility_Accounts.listView-meta.xml
<ListView>
    <fullName>ERS_Facility_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Facility_ID__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Type__pc</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.IS_PARNTER</columns>
    <columns>Service_Territory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Approved_Garage,Account.Facility</value>
    </filters>
    <label>ERS Facility Accounts</label>
</ListView>