unpackaged/main/default/objects/Account/listViews/Find_Accounts.listView-meta.xml
<ListView>
    <fullName>Find_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Member_ID__c</columns>
    <columns>Member_Card_Num__pc</columns>
    <columns>Membership_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UPDATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>dmigr</value>
    </filters>
    <label>Find Accounts</label>
</ListView>